Add --verbose to jest, so it writes out all the tests.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "node --experimental-vm-modules node_modules/.bin/jest"
+    "test": "node --experimental-vm-modules node_modules/.bin/jest --verbose"
   },
   "keywords": [],
   "author": "Pontus Serrander <ps223qb@student.lnu.se>",
